minor layout issues

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -13,7 +13,7 @@ body {
     width: 30%;
     min-width: 320px;
     padding: 24px;
-    margin-top: 100px;
+    margin-top: 96px;
 }
 
 .display-side {
@@ -36,6 +36,7 @@ form {
 .form-title {
     margin-right: 12px;
     margin-bottom: 8px;
+    margin-top: 24px;
 }
 
 input[type=number] {
@@ -133,9 +134,13 @@ input {
 }
 
 .btn-container {
-
     height: 23px;
     margin-top: 4px;
+}
+
+#btn-reset-alarm {
+    margin-right: 12px;
+    margin-top: 10px;
 }
 
 label {
